--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "ipython>=9.8.0",
     "pydantic>=2.12.5",
     "python-decouple>=3.8",
+    "requests>=2.32.5",
 ]
 
 [dependency-groups]
